[package]
name = "cleanroom"
version = "0.0.2"
edition = "2021"
repository = "https://git.vexd.dev/bloated/cleanroom"
authors = ["creightor"]
description = "Shell environment manager"
readme = "README.md"
license-file = "LICENSE"
keywords = ["cli", "shell", "terminal", "environment", "manager"]
categories = ["command-line-utilities", "virtualization"]

[dependencies]
thiserror = "1"
xdg = "2"
clap = { version = "4", features = ["derive", "wrap_help"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0"

[dev-dependencies]
rand = "0.8.5"
